Router start and structure checking

--- a/template/package.json
+++ b/template/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "vuetify": "^1.0.0",
     "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}}
+    "vue-router": "^3.0.1"{{/router}},
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
